--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           instance.render();
         },
         showLauncher: false, // Hide the web chat launcher, you will open the WebView from your mobile application
-        openChatByDefault: false, // When the web chat WebView is opened, the web chat will already be open and ready to go.
+        openChatByDefault: true, // When the web chat WebView is opened, the web chat will already be open and ready to go.
         hideCloseButton: true, // And the web chat will not show a close button, instead relying on the controls to close the WebView
       };
       setTimeout(function () {
